# Mobile_robotter

./: Hoved ideer.docx  MatlabForTestData.asv  MatlabForTestData.m  README.md
DFT/fourier/: CMakeLists.txt  main.cpp
FFS/: FFS.sln
FFS/FFS/: DFT.cpp  DFT.h  FFS.vcxproj  FFS.vcxproj.filters  FFT.cpp  FFT.h  main.cpp
GUIProject/: CMakeLists.txt  CMakeLists.txt.user.347c38c  GUIWindow.cpp  GUIWindow.h  dataTypes.cpp  dataTypes.h  main.cpp
GetInfoFromMic/: Audio.h  CMakeLists.txt  DTMF0.txt  DTMF1.txt  DTMF6.txt  DTMF9R.txt  audio.cpp  audio.h  main.cpp
GetInfoFromMic/fftw-3.3.10/: Makefile  config.status  libtool
GetInfoFromMic/fftw-3.3.10/api/: Makefile
GetInfoFromMic/fftw-3.3.10/dft/: Makefile
GetInfoFromMic/fftw-3.3.10/dft/scalar/: Makefile
GetInfoFromMic/fftw-3.3.10/dft/scalar/codelets/: Makefile
GetInfoFromMic/fftw-3.3.10/dft/simd/: Makefile
GetInfoFromMic/fftw-3.3.10/dft/simd/altivec/: Makefile
GetInfoFromMic/fftw-3.3.10/dft/simd/avx/: Makefile
GetInfoFromMic/fftw-3.3.10/dft/simd/avx-128-fma/: Makefile
GetInfoFromMic/fftw-3.3.10/dft/simd/avx2/: Makefile
GetInfoFromMic/fftw-3.3.10/dft/simd/avx2-128/: Makefile
GetInfoFromMic/fftw-3.3.10/dft/simd/avx512/: Makefile
GetInfoFromMic/fftw-3.3.10/dft/simd/common/: Makefile
GetInfoFromMic/fftw-3.3.10/dft/simd/generic-simd128/: Makefile
GetInfoFromMic/fftw-3.3.10/dft/simd/generic-simd256/: Makefile
GetInfoFromMic/fftw-3.3.10/dft/simd/kcvi/: Makefile
GetInfoFromMic/fftw-3.3.10/dft/simd/neon/: Makefile
GetInfoFromMic/fftw-3.3.10/dft/simd/sse2/: Makefile
GetInfoFromMic/fftw-3.3.10/dft/simd/vsx/: Makefile
GetInfoFromMic/fftw-3.3.10/doc/: Makefile
GetInfoFromMic/fftw-3.3.10/doc/FAQ/: Makefile
GetInfoFromMic/fftw-3.3.10/genfft/: Makefile
GetInfoFromMic/fftw-3.3.10/kernel/: Makefile
GetInfoFromMic/fftw-3.3.10/libbench2/: Makefile
GetInfoFromMic/fftw-3.3.10/m4/: Makefile
GetInfoFromMic/fftw-3.3.10/mpi/: Makefile
GetInfoFromMic/fftw-3.3.10/rdft/: Makefile
GetInfoFromMic/fftw-3.3.10/rdft/scalar/: Makefile
GetInfoFromMic/fftw-3.3.10/rdft/scalar/r2cb/: Makefile
GetInfoFromMic/fftw-3.3.10/rdft/scalar/r2cf/: Makefile
GetInfoFromMic/fftw-3.3.10/rdft/scalar/r2r/: Makefile
GetInfoFromMic/fftw-3.3.10/rdft/simd/: Makefile
GetInfoFromMic/fftw-3.3.10/rdft/simd/altivec/: Makefile
GetInfoFromMic/fftw-3.3.10/rdft/simd/avx/: Makefile
GetInfoFromMic/fftw-3.3.10/rdft/simd/avx-128-fma/: Makefile
GetInfoFromMic/fftw-3.3.10/rdft/simd/avx2/: Makefile
GetInfoFromMic/fftw-3.3.10/rdft/simd/avx2-128/: Makefile
GetInfoFromMic/fftw-3.3.10/rdft/simd/avx512/: Makefile
GetInfoFromMic/fftw-3.3.10/rdft/simd/common/: Makefile
GetInfoFromMic/fftw-3.3.10/rdft/simd/generic-simd128/: Makefile
GetInfoFromMic/fftw-3.3.10/rdft/simd/generic-simd256/: Makefile
GetInfoFromMic/fftw-3.3.10/rdft/simd/kcvi/: Makefile
GetInfoFromMic/fftw-3.3.10/rdft/simd/neon/: Makefile
GetInfoFromMic/fftw-3.3.10/rdft/simd/sse2/: Makefile
GetInfoFromMic/fftw-3.3.10/rdft/simd/vsx/: Makefile
GetInfoFromMic/fftw-3.3.10/reodft/: Makefile
GetInfoFromMic/fftw-3.3.10/simd-support/: Makefile
GetInfoFromMic/fftw-3.3.10/support/: Makefile
GetInfoFromMic/fftw-3.3.10/tests/: Makefile  bench
GetInfoFromMic/fftw-3.3.10/threads/: Makefile
GetInfoFromMic/fftw-3.3.10/tools/: Makefile  fftw-wisdom
GetInfoFromMic/portaudio/: Makefile  config.status  libtool
GetInfoFromMic/portaudio/lib/.libs/: libportaudio.so.2.0.0
Goer test project/: Goer test project.sln
Goer test project/Goer test project/: Goer test project.vcxproj  Goer test project.vcxproj.filters  audio.cpp  audio.h  main.cpp
LidarReading/: CMakeLists.txt  functions.cpp  functions.h  helperClass.cpp  helperClass.h  lidarData.cpp  lidarData.cpp.autosave  lidarData.h  main.cpp  widgetClass.cpp  widgetClass.h
References/: Links
Tekts dokumenter/Logbog/: LogBog-9-okt
Tests/: AlgorithmCompareTest.h  CMakeLists.txt  ProgramRunner.h  audio.cpp  audio.h  dft.cpp  dft.h  fft.cpp  fft.h  goertzel.cpp  goertzel.h  magnitudeanalysis.cpp  magnitudeanalysis.h  main.cpp  sound.h
Text docuements/Logbog/: Logbog16Okt
Text docuements/Test/: PAUSETEST  PAUSETEST_Checked_Output  PauseResult  TONETEST  TONETEST2  TONETEST2_Checked_Output  TONETEST_Checked_Output  TestDataFraGoertzel.txt  Tone2Result  ToneResult  testToDo
Video/: LiDARBAD.webm  LiDARGOOD.webm
build-GetInfoFromMic-Imported_Kit-Debug/: CMakeCache.txt  GetInfoFromMic  Makefile  cmake_install.cmake  qtcsettings.cmake
build-LidarReading-Imported_Kit-Debug/: CMakeCache.txt
build-oioioi-Imported_Kit-Debug/: CMakeCache.txt  Makefile  cmake_install.cmake  qtcsettings.cmake
drawMap/: CMakeLists.txt  GUIWindow.cpp  GUIWindow.h  dataTypes.cpp  dataTypes.h
oioioi/: CMakeLists.txt  CMakeLists.txt.user.10474a1  main.cpp
pointGenerator/main/: CMakeLists.txt  main.cpp
ros2_ws/src/controller_input/: CMakeLists.txt
ros2_ws/src/controller_input/include/: controllerinput.h  dtmf_to_cmd_vel_node.h
ros2_ws/src/controller_input/launch/: controller_launch.py
ros2_ws/src/controller_input/src/: controllerinput.cpp  main.cpp
ros2_ws/src/dtmf_to_cmd_vel/: CMakeLists.txt  package.xml
ros2_ws/src/dtmf_to_cmd_vel/include/: audio.h  dtmf_to_cmd_vel_node.h
ros2_ws/src/dtmf_to_cmd_vel/src/: audio.cpp  dtmf_to_cmd_vel_node.cpp  main.cpp
ros2_ws/src/lidar_data/: CMakeLists.txt  package.xml
ros2_ws/src/lidar_data/include/: lidarnode.h
ros2_ws/src/lidar_data/src/: lidarData.cpp  lidarnode.cpp  main.cpp
ros2_ws/src/lidar_gui/: CMakeLists.txt
ros2_ws/src/lidar_gui/include/: GUIWindow.h  dataTypes.h  lidarnode.h
ros2_ws/src/lidar_gui/src/: GUIWindow.cpp  dataTypes.cpp  dataTypes.h  lidarnode.cpp  main.cpp  main.cpp.autosave
ros2_ws/src/lidar_reading/: CMakeLists.txt  package.xml
ros2_ws/src/lidar_reading/include/: ExternalTrigger.h
ros2_ws/src/lidar_reading/src/: RobotClass.h  functions.cpp  lidarData.h  main.cpp  wallClass.h  widgetClass.cpp  widgetClass.h  windowClass.cpp  windowClass.h
soundGenerator/: CMakeLists.txt  CMakeLists.txt.user.ec22663  CMakeLists.txt.user.efd26c4  main.cpp  sound.h
(+221 files in other folders)
